@@ -1,11 +1,13 @@
 package com.bd.sitebd.controller;
 
+import com.bd.sitebd.model.Curso;
 import com.bd.sitebd.model.Reserva;
 import com.bd.sitebd.model.Usuario;
 import com.bd.sitebd.model.dto.DiaCalendario;
 import com.bd.sitebd.model.enums.StatusReserva;
 import org.springframework.security.core.Authentication;
 import com.bd.sitebd.model.enums.TipoUsuario;
+import com.bd.sitebd.repositories.CursoRepository;
 import com.bd.sitebd.service.DiaBloqueadoService;
 import com.bd.sitebd.service.ReservaService;
 import com.bd.sitebd.service.UsuarioService;
@@ -15,15 +17,15 @@ import java.time.LocalDate;
 import java.time.YearMonth;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.format.annotation.DateTimeFormat;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.ResponseEntity; // <-- IMPORT ADICIONADO
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -37,50 +39,97 @@ public class AdminController {
     private UsuarioService usuarioService;
 
     @Autowired
-    private BCryptPasswordEncoder passwordEncoder;
+    private PasswordEncoder passwordEncoder;
 
     @Autowired
     private ReservaService reservaService;
 
     @Autowired
+    private CursoRepository cursoRepository;
+
+    @Autowired
     private DiaBloqueadoService diaBloqueadoService;
 
-    // Tela de cadastro de usuários (apenas ADMIN)
+    // --- SEU MÉTODO GET/cadastro (JÁ ESTÁ CORRETO) ---
     @PreAuthorize("hasRole('ADMIN')")
     @GetMapping("/cadastro")
-    public String exibirCadastro() {
+    public String exibirCadastro(Model model) {
+        List<Curso> todosOsCursos = cursoRepository.findAll();
+        model.addAttribute("listaDeCursos", todosOsCursos);
+
+        System.out.println("--- DEBUG AdminController ---");
+        System.out.println("Número de cursos encontrados no banco: " + todosOsCursos.size());
+        if (!todosOsCursos.isEmpty()) {
+            System.out.println("Primeiro curso: ID=" + todosOsCursos.get(0).getId() + ", Sigla="
+                    + todosOsCursos.get(0).getSigla() + ", Periodo=" + todosOsCursos.get(0).getPeriodo());
+        }
+        System.out.println("Adicionando ao model com nome: listaDeCursos");
+
         return "cadastro";
     }
 
+    // --- SEU MÉTODO POST/cadastro (JÁ ESTÁ CORRETO) ---
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/cadastro")
     public String processarCadastro(@RequestParam String email,
+            @RequestParam String nome,
             @RequestParam String senha,
             @RequestParam String confirmarSenha,
             @RequestParam TipoUsuario tipo,
+            @RequestParam(required = false) List<Long> cursos,
             RedirectAttributes redirectAttributes) {
 
         if (!senha.equals(confirmarSenha)) {
             redirectAttributes.addFlashAttribute("mensagemErro", "As senhas não conferem!");
+            redirectAttributes.addFlashAttribute("usuarioInput",
+                    Map.of("email", email, "nome", nome, "tipo", tipo.name()));
             return "redirect:/admin/cadastro";
+        }
+
+        Set<Curso> cursosSelecionados = new HashSet<>();
+        if ((tipo == TipoUsuario.PROFESSOR || tipo == TipoUsuario.MONITOR)) {
+            if (cursos == null || cursos.isEmpty()) {
+                redirectAttributes.addFlashAttribute("mensagemErro",
+                        "Professores e Monitores devem estar associados a pelo menos um curso!");
+                redirectAttributes.addFlashAttribute("usuarioInput",
+                        Map.of("email", email, "nome", nome, "tipo", tipo.name()));
+                return "redirect:/admin/cadastro";
+            }
+            cursosSelecionados.addAll(cursoRepository.findAllById(cursos));
+            if (cursosSelecionados.size() != cursos.size()) {
+                System.err.println("Aviso: Alguns IDs de curso inválidos foram enviados ou não encontrados.");
+            }
         }
 
         try {
             Usuario novo = new Usuario();
             novo.setEmail(email);
+            novo.setNome(nome);
             novo.setSenha(passwordEncoder.encode(senha));
             novo.setTipo(tipo);
+            novo.setCursos(cursosSelecionados);
 
             usuarioService.salvar(novo);
 
             redirectAttributes.addFlashAttribute("mensagem", "Usuário cadastrado com sucesso!");
 
         } catch (Exception e) {
-            redirectAttributes.addFlashAttribute("mensagemErro", e.getMessage());
+            String mensagemErro = "Erro ao cadastrar usuário.";
+            if (e.getMessage() != null && e.getMessage().toLowerCase().contains("unique constraint")
+                    && e.getMessage().toLowerCase().contains("email")) {
+                mensagemErro = "Este e-mail já está cadastrado.";
+            } else {
+                e.printStackTrace();
+            }
+            redirectAttributes.addFlashAttribute("mensagemErro", mensagemErro);
+            redirectAttributes.addFlashAttribute("usuarioInput",
+                    Map.of("email", email, "nome", nome, "tipo", tipo.name(), "cursos",
+                            cursos != null ? cursos : List.of()));
         }
         return "redirect:/admin/cadastro";
     }
 
+    // --- SEUS MÉTODOS DE AUDITÓRIO (JÁ ESTÃO CORRETOS) ---
     @PreAuthorize("hasRole('ADMIN')")
     @GetMapping("/auditorio-admin")
     public String auditorioAdmin(@RequestParam(value = "mes", required = false) Integer mes,
@@ -92,25 +141,15 @@ public class AdminController {
         String emailUsuario = authentication.getName();
         model.addAttribute("usuarioLogadoEmail", emailUsuario);
 
-        // Lógica completa copiada do UsuarioController para manter a consistência
         YearMonth ym = (ano != null && mes != null) ? YearMonth.of(ano, mes) : YearMonth.now();
-
-        // ✨ ALTERAÇÃO AQUI: Usa o novo método para buscar os dados para o admin ✨
-        List<Reserva> todasAsReservasDoMes = reservaService.buscarReservasAuditorioParaAdmin(ym);
-
         List<LocalDate> diasBloqueados = diaBloqueadoService.buscarDiasBloqueadosNoMes(ym);
-
         YearMonth mesCorrente = YearMonth.now();
         model.addAttribute("desabilitarAnterior", !ym.isAfter(mesCorrente));
-
-        // Para o admin, buscamos TODAS as reservas do auditório, não apenas as de um
-        // usuário
         List<Reserva> reservasAuditorio = reservaService.buscarReservasAuditorio(ym);
 
         List<DiaCalendario> diasDoMes = new ArrayList<>();
         LocalDate primeiroDiaDoMes = ym.atDay(1);
         int diaDaSemanaDoPrimeiroDia = primeiroDiaDoMes.getDayOfWeek().getValue();
-
         for (int i = 1; i < diaDaSemanaDoPrimeiroDia; i++) {
             diasDoMes.add(new DiaCalendario(0, "vazio"));
         }
@@ -121,34 +160,25 @@ public class AdminController {
             LocalDate dataDoDia = ym.atDay(i);
             DiaCalendario diaObj;
 
-            // ----- INÍCIO DA LÓGICA CORRIGIDA -----
             if (dataDoDia.isBefore(hoje)) {
                 diaObj = new DiaCalendario(i, "passado");
             } else {
-                // Para dias futuros ou o dia de hoje
                 boolean foiBloqueadoPeloAdmin = diasBloqueados.contains(dataDoDia);
                 boolean ehDomingo = dataDoDia.getDayOfWeek() == DayOfWeek.SUNDAY;
 
                 if (foiBloqueadoPeloAdmin) {
-                    diaObj = new DiaCalendario(i, "bloqueado"); // Status para dias bloqueados
+                    diaObj = new DiaCalendario(i, "bloqueado");
                 } else if (ehDomingo) {
-                    diaObj = new DiaCalendario(i, "indisponivel"); // Status para domingos
+                    diaObj = new DiaCalendario(i, "indisponivel");
                 } else {
-                    diaObj = new DiaCalendario(i, "disponivel"); // Status para dias normais
-                    // ✨ CORREÇÃO APLICADA AQUI ✨
-                    // Filtra os eventos do dia a partir da lista correta `todasAsReservasDoMes`
-                    List<Reserva> eventosDoDia = todasAsReservasDoMes.stream()
+                    diaObj = new DiaCalendario(i, "disponivel");
+                    List<Reserva> eventosDoDia = reservasAuditorio.stream()
                             .filter(r -> r.getData().isEqual(dataDoDia))
                             .sorted(Comparator.comparing(Reserva::getHora))
-                            .collect(Collectors.toList());
-
+                            .toList();
                     diaObj.setEventos(eventosDoDia);
-                    // Adiciona os eventos do dia (reservas)
-
                 }
             }
-            // ----- FIM DA LÓGICA CORRIGIDA -----
-
             diasDoMes.add(diaObj);
         }
 
@@ -177,59 +207,62 @@ public class AdminController {
             @RequestParam("status") String status,
             RedirectAttributes redirectAttributes) {
         try {
-            StatusReserva novoStatus = StatusReserva.valueOf(status);
+            StatusReserva novoStatus = StatusReserva.valueOf(status.toUpperCase());
             reservaService.atualizarStatus(id, novoStatus);
             redirectAttributes.addFlashAttribute("mensagemSucesso", "Status da reserva atualizado com sucesso!");
+        } catch (IllegalArgumentException e) {
+            redirectAttributes.addFlashAttribute("mensagemErro", "Status inválido fornecido.");
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("mensagemErro", "Erro ao atualizar o status da reserva.");
+            e.printStackTrace();
         }
         return "redirect:/admin/solicitacoes";
     }
 
-    // Endpoint para BLOQUEAR
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/auditorio/bloquear-dias")
     public String bloquearDias(
             @RequestParam(value = "diasSelecionados", required = false) Set<LocalDate> diasParaBloquear,
             RedirectAttributes redirectAttributes) {
         if (diasParaBloquear == null || diasParaBloquear.isEmpty()) {
-            return "redirect:/admin/auditorio-admin"; // Redireciona se nada for selecionado
+            return "redirect:/admin/auditorio-admin";
         }
         try {
             diasParaBloquear.forEach(diaBloqueadoService::bloquearDia);
-            // Mensagem de sucesso removida
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("mensagemErro", "Ocorreu um erro ao bloquear os dias.");
+            e.printStackTrace();
         }
         YearMonth ym = YearMonth.from(diasParaBloquear.iterator().next());
         return "redirect:/admin/auditorio-admin?mes=" + ym.getMonthValue() + "&ano=" + ym.getYear();
     }
 
-    // NOVO Endpoint para DESBLOQUEAR
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/auditorio/desbloquear-dias")
     public String desbloquearDias(
             @RequestParam(value = "diasSelecionados", required = false) Set<LocalDate> diasParaDesbloquear,
             RedirectAttributes redirectAttributes) {
         if (diasParaDesbloquear == null || diasParaDesbloquear.isEmpty()) {
-            return "redirect:/admin/auditorio-admin"; // Redireciona se nada for selecionado
+            return "redirect:/admin/auditorio-admin";
         }
         try {
             diasParaDesbloquear.forEach(diaBloqueadoService::desbloquearDia);
-            // Mensagem de sucesso removida
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("mensagemErro", "Ocorreu um erro ao desbloquear os dias.");
+            e.printStackTrace();
         }
         YearMonth ym = YearMonth.from(diasParaDesbloquear.iterator().next());
         return "redirect:/admin/auditorio-admin?mes=" + ym.getMonthValue() + "&ano=" + ym.getYear();
     }
 
+    // --- FUNCIONALIDADE ADICIONADA DO SEGUNDO ARQUIVO ---
     /**
-     * ✨ NOVO ENDPOINT PARA ATUALIZAR STATUS EM MASSA ✨
+     * NOVO ENDPOINT PARA ATUALIZAR STATUS EM MASSA
      * Recebe uma lista de alterações de status e as aplica.
      */
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/auditorio/atualizar-status-massa")
+    @ResponseBody // Retorna dados (JSON), não uma página HTML
     public ResponseEntity<Void> atualizarStatusReservaEmMassa(@RequestBody List<UpdateStatusRequest> requests) {
         try {
             // Itera sobre a lista de requisições e atualiza cada uma
@@ -239,10 +272,12 @@ public class AdminController {
             return ResponseEntity.ok().build(); // Retorna 200 OK
         } catch (Exception e) {
             // Logar o erro é uma boa prática
+            e.printStackTrace();
             return ResponseEntity.badRequest().build(); // Retorna 400 em caso de erro
         }
     }
 
+    // --- CLASSE INTERNA ADICIONADA DO SEGUNDO ARQUIVO ---
     public static class UpdateStatusRequest {
         private Long reservaId;
         private StatusReserva novoStatus;
@@ -264,5 +299,4 @@ public class AdminController {
             this.novoStatus = novoStatus;
         }
     }
-
 }
